@@ -2,7 +2,8 @@ Revision history for Perl extension App::Wax.
 
 1.0.4 TBC
 
-    - fix changelog nit
+    - make sure temp files are removed on error
+    - changelog: fix --cache/--mirror descriptions
 
 1.0.3 Wed Feb 4 22:26:26 2015
 
